--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
    </div>
   <div class="data-table-covid-track"> 
    <div class="covid-track-table">
-     <div>
+     <div class="covid-track-head-titles">
       <div>States</div> 
       <div>Total Cases</div>
       <div>Total Deaths</div>
@@ -823,7 +823,7 @@
       <div>Currently in ICU</div>
       <div>Last Updated</div> 
      </div> 
-     <div>
+     <div class="covid-track-head-titles">
       <div>United States</div>
       <div class="us-covidtrack-confirm"></div>
       <div class="us-covidtrack-death"></div>
@@ -832,7 +832,7 @@
       <div class="us-covidtrack-curicu"></div> 
       <div class="us-covidtrack-recent"></div> 
      </div>      
-     <div>
+     <div class="covid-track-head-titles">
       <div>Alabama</div>
       <div class="us-covidtrack-al-confirm"></div>
       <div class="us-covidtrack-al-death"></div>
@@ -842,7 +842,7 @@
       <div class="us-covidtrack-al-recent"></div>        
      </div>
      <div>
-      <div>Alaska</div>
+      <div class="covid-track-head-titles">Alaska</div>
       <div class="us-covidtrack-ak-confirm"></div>
       <div class="us-covidtrack-ak-death"></div>
       <div class="us-covidtrack-ak-tothos"></div>
@@ -850,7 +850,7 @@
       <div class="us-covidtrack-ak-curicu"></div> 
       <div class="us-covidtrack-ak-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>American Samoa</div>
       <div class="us-covidtrack-as-confirm"></div>
       <div class="us-covidtrack-as-death"></div>
@@ -859,7 +859,7 @@
       <div class="us-covidtrack-as-curicu"></div> 
       <div class="us-covidtrack-as-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Arizona</div>
       <div class="us-covidtrack-az-confirm"></div>
       <div class="us-covidtrack-az-death"></div>
@@ -869,7 +869,7 @@
       <div class="us-covidtrack-az-recent"></div>        
      </div>
      <div>
-      <div>Arkansas</div>
+      <div class="covid-track-head-titles">Arkansas</div>
       <div class="us-covidtrack-ar-confirm"></div>
       <div class="us-covidtrack-ar-death"></div>
       <div class="us-covidtrack-ar-tothos"></div>
@@ -877,7 +877,7 @@
       <div class="us-covidtrack-ar-curicu"></div> 
       <div class="us-covidtrack-ar-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>California</div>
       <div id="us-covidtrack-ca-confirm"></div>
       <div id="us-covidtrack-ca-death"></div>
@@ -887,7 +887,7 @@
       <div class="us-covidtrack-ca-recent"></div>        
      </div>
      <div>
-      <div>Colorado</div>
+      <div class="covid-track-head-titles">Colorado</div>
       <div class="us-covidtrack-co-confirm"></div>
       <div class="us-covidtrack-co-death"></div>
       <div class="us-covidtrack-co-tothos"></div>
@@ -895,7 +895,7 @@
       <div class="us-covidtrack-co-curicu"></div> 
       <div class="us-covidtrack-co-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Connecticut</div>
       <div class="us-covidtrack-ct-confirm"></div>
       <div class="us-covidtrack-ct-death"></div>
@@ -905,7 +905,7 @@
       <div class="us-covidtrack-ct-recent"></div>        
      </div>
      <div>
-      <div>Deleware</div>
+      <div class="covid-track-head-titles">Deleware</div>
       <div class="us-covidtrack-de-confirm"></div>
       <div class="us-covidtrack-de-death"></div>
       <div class="us-covidtrack-de-tothos"></div>
@@ -913,7 +913,7 @@
       <div class="us-covidtrack-de-curicu"></div> 
       <div class="us-covidtrack-de-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>District of Columbia</div>
       <div class="us-covidtrack-dc-confirm"></div>
       <div class="us-covidtrack-dc-death"></div>
@@ -922,7 +922,7 @@
       <div class="us-covidtrack-dc-curicu"></div> 
       <div class="us-covidtrack-dc-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Florida</td>
       <div class="us-covidtrack-fl-confirm"></div>
       <div class="us-covidtrack-fl-death"></div>
@@ -931,7 +931,7 @@
       <div class="us-covidtrack-fl-curicu"></div> 
       <div class="us-covidtrack-fl-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Georgia</td>
       <div class="us-covidtrack-ga-confirm"></div>
       <div class="us-covidtrack-ga-death"></div>
@@ -940,7 +940,7 @@
       <div class="us-covidtrack-ga-curicu"></div> 
       <div class="us-covidtrack-ga-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Guam</td>
       <div class="us-covidtrack-gu-confirm"></div>
       <div class="us-covidtrack-gu-death"></div>
@@ -949,7 +949,7 @@
       <div class="us-covidtrack-gu-curicu"></div> 
       <div class="us-covidtrack-gu-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Hawaii</div>
       <div class="us-covidtrack-hi-confirm"></div>
       <div class="us-covidtrack-hi-death"></div>
@@ -958,7 +958,7 @@
       <div class="us-covidtrack-hi-curicu"></div> 
       <div class="us-covidtrack-hi-recent"></div>        
      </div>    
-     <div>
+     <div class="covid-track-head-titles">
       <div>Idaho</div>
       <div class="us-covidtrack-id-confirm"></div>
       <div class="us-covidtrack-id-death"></div>
@@ -967,7 +967,7 @@
       <div class="us-covidtrack-id-curicu"></div> 
       <div class="us-covidtrack-id-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Illinois</div>
       <div class="us-covidtrack-il-confirm"></div>
       <div class="us-covidtrack-il-death"></div>
@@ -976,7 +976,7 @@
       <div class="us-covidtrack-il-curicu"></div> 
       <div class="us-covidtrack-il-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Indian</div>
       <div class="us-covidtrack-in-confirm"></div>
       <div class="us-covidtrack-in-death"></div>
@@ -985,7 +985,7 @@
       <div class="us-covidtrack-in-curicu"></div> 
       <div class="us-covidtrack-in-recent"></div>        
      </div>      
-     <div>
+     <div class="covid-track-head-titles">
       <div>Iowa</div>
       <div class="us-covidtrack-ia-confirm"></div>
       <div class="us-covidtrack-ia-death"></div>
@@ -994,7 +994,7 @@
       <div class="us-covidtrack-ia-curicu"></div> 
       <div class="us-covidtrack-ia-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Kansas</div>
       <div class="us-covidtrack-ks-confirm"></div>
       <div class="us-covidtrack-ks-death"></div>
@@ -1003,7 +1003,7 @@
       <div class="us-covidtrack-ks-curicu"></div> 
       <div class="us-covidtrack-ks-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Kentucky</div>
       <div class="us-covidtrack-ky-confirm"></div>
       <div class="us-covidtrack-ky-death"></div>
@@ -1012,7 +1012,7 @@
       <div class="us-covidtrack-ky-curicu"></div> 
       <div class="us-covidtrack-ky-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Louisiana</div>
       <div class="us-covidtrack-la-confirm"></div>
       <div class="us-covidtrack-la-death"></div>
@@ -1021,7 +1021,7 @@
       <div class="us-covidtrack-la-curicu"></div> 
       <div class="us-covidtrack-la-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Maine</div>
       <div class="us-covidtrack-me-confirm"></div>
       <div class="us-covidtrack-me-death"></div>
@@ -1030,7 +1030,7 @@
       <div class="us-covidtrack-me-curicu"></div> 
       <div class="us-covidtrack-me-recent"></div>        
      </div>      
-     <div>
+     <div class="covid-track-head-titles">
       <div>Maryland</div>
       <div class="us-covidtrack-md-confirm"></div>
       <div class="us-covidtrack-md-death"></div>
@@ -1039,7 +1039,7 @@
       <div class="us-covidtrack-md-curicu"></div> 
       <div class="us-covidtrack-md-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Massachusetts</div>
       <div class="us-covidtrack-ma-confirm"></div>
       <div class="us-covidtrack-ma-death"></div>
@@ -1048,7 +1048,7 @@
       <div class="us-covidtrack-ma-curicu"></div> 
       <div class="us-covidtrack-ma-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Michigan</div>
       <div class="us-covidtrack-mi-confirm"></div>
       <div class="us-covidtrack-mi-death"></div>
@@ -1057,7 +1057,7 @@
       <div class="us-covidtrack-mi-curicu"></div> 
       <div class="us-covidtrack-mi-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Minnesota</div>
       <div class="us-covidtrack-mn-confirm"></div>
       <div class="us-covidtrack-mn-death"></div>
@@ -1066,7 +1066,7 @@
       <div class="us-covidtrack-mn-curicu"></div> 
       <div class="us-covidtrack-mn-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Mississippi</div>
       <div class="us-covidtrack-ms-confirm"></div>
       <div class="us-covidtrack-ms-death"></div>
@@ -1075,7 +1075,7 @@
       <div class="us-covidtrack-ms-curicu"></div> 
       <div class="us-covidtrack-ms-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Missouri</div>
       <div class="us-covidtrack-mo-confirm"></div>
       <div class="us-covidtrack-mo-death"></div>
@@ -1085,7 +1085,7 @@
       <div class="us-covidtrack-mo-recent"></div>        
      </div>
      <div>
-      <div>Montana</div>
+      <div class="covid-track-head-titles">Montana</div>
       <div class="us-covidtrack-mt-confirm"></div>
       <div class="us-covidtrack-mt-death"></div>
       <div class="us-covidtrack-mt-tothos"></div>
@@ -1094,7 +1094,7 @@
       <div class="us-covidtrack-mt-recent"></div>        
      </div>
      <div>
-      <div>Nebraska</div>
+      <div class="covid-track-head-titles">Nebraska</div>
       <div class="us-covidtrack-ne-confirm"></div>
       <div class="us-covidtrack-ne-death"></div>
       <div class="us-covidtrack-ne-tothos"></div>
@@ -1103,7 +1103,7 @@
       <div class="us-covidtrack-ne-recent"></div>        
      </div>
      <div>
-      <div>Neveda</div>
+      <div class="covid-track-head-titles">Neveda</div>
       <div class="us-covidtrack-nv-confirm"></div>
       <div class="us-covidtrack-nv-death"></div>
       <div class="us-covidtrack-nv-tothos"></div>
@@ -1112,7 +1112,7 @@
       <div class="us-covidtrack-nv-recent"></div>        
      </div>
      <div>
-      <div>New Hampshire</td>
+      <div class="covid-track-head-titles">New Hampshire</td>
       <div class="us-covidtrack-nh-confirm"></div>
       <div class="us-covidtrack-nh-death"></div>
       <div class="us-covidtrack-nh-tothos"></div>
@@ -1121,7 +1121,7 @@
       <div class="us-covidtrack-nh-recent"></div>        
      </div>
      <div>
-      <div>New Jersey</div>
+      <div class="covid-track-head-titles">New Jersey</div>
       <div class="us-covidtrack-nj-confirm"></div>
       <div class="us-covidtrack-nj-death"></div>
       <div class="us-covidtrack-nj-tothos"></div>
@@ -1130,7 +1130,7 @@
       <div class="us-covidtrack-nj-recent"></div>        
      </div>
      <div>
-      <div>New Mexico</div>
+      <div class="covid-track-head-titles">New Mexico</div>
       <div class="us-covidtrack-nm-confirm"></div>
       <div class="us-covidtrack-nm-death"></div>
       <div class="us-covidtrack-nm-tothos"></div>
@@ -1139,7 +1139,7 @@
       <div class="us-covidtrack-nm-recent"></div>        
      </div>        
      <div>
-      <div>New York</div>
+      <div class="covid-track-head-titles">New York</div>
       <div class="us-covidtrack-ny-confirm"></div>
       <div class="us-covidtrack-ny-death"></div>
       <div class="us-covidtrack-ny-tothos"></div>
@@ -1148,7 +1148,7 @@
       <div class="us-covidtrack-ny-recent"></div>        
      </div>
      <div>
-      <div>North Carolina</div>
+      <div class="covid-track-head-titles">North Carolina</div>
       <div class="us-covidtrack-nc-confirm"></div>
       <div class="us-covidtrack-nc-death"></div>
       <div class="us-covidtrack-nc-tothos"></div>
@@ -1157,7 +1157,7 @@
       <div class="us-covidtrack-nc-recent"></div>        
      </div>
      <div>
-      <div>North Dakota</div>
+      <div class="covid-track-head-titles">North Dakota</div>
       <div class="us-covidtrack-nd-confirm"></div>
       <div class="us-covidtrack-nd-death"></div>
       <div class="us-covidtrack-nd-tothos"></div>
@@ -1166,7 +1166,7 @@
       <div class="us-covidtrack-nd-recent"></div>        
      </div>
      <div>
-      <div>Northern Mariana Isalnd</div>
+      <div class="covid-track-head-titles">Northern Mariana Isalnd</div>
       <div class="us-covidtrack-mp-confirm"></div>
       <div class="us-covidtrack-mp-death"></div>
       <div class="us-covidtrack-mp-tothos"></div>
@@ -1174,7 +1174,7 @@
       <div class="us-covidtrack-mp-curicu"></div> 
       <div class="us-covidtrack-mp-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Ohio</div>
       <div class="us-covidtrack-oh-confirm"></div>
       <div class="us-covidtrack-oh-death"></div>
@@ -1183,7 +1183,7 @@
       <div class="us-covidtrack-oh-curicu"></div> 
       <div class="us-covidtrack-oh-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Oklahoma</div>
       <div class="us-covidtrack-ok-confirm"></div>
       <div class="us-covidtrack-ok-death"></div>
@@ -1192,7 +1192,7 @@
       <div class="us-covidtrack-ok-curicu"></div> 
       <div class="us-covidtrack-ok-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Oregon</div>
       <div class="us-covidtrack-or-confirm"></div>
       <div class="us-covidtrack-or-death"></div>
@@ -1201,7 +1201,7 @@
       <div class="us-covidtrack-or-curicu"></div> 
       <div class="us-covidtrack-or-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Pennsylvania</div>
       <div class="us-covidtrack-pa-confirm"></div>
       <div class="us-covidtrack-pa-death"></div>
@@ -1210,7 +1210,7 @@
       <div class="us-covidtrack-pa-curicu"></div> 
       <div class="us-covidtrack-pa-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Puerto Rico</div>
       <div class="us-covidtrack-pr-confirm"></div>
       <div class="us-covidtrack-pr-death"></div>
@@ -1219,7 +1219,7 @@
       <div class="us-covidtrack-pr-curicu"></div> 
       <div class="us-covidtrack-pr-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Rhode Island</div>
       <div class="us-covidtrack-ri-confirm"></div>
       <div class="us-covidtrack-ri-death"></div>
@@ -1228,7 +1228,7 @@
       <div class="us-covidtrack-ri-curicu"></div> 
       <div class="us-covidtrack-ri-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>South Carolina</div>
       <div class="us-covidtrack-sc-confirm"></div>
       <div class="us-covidtrack-sc-death"></div>
@@ -1238,7 +1238,7 @@
       <div class="us-covidtrack-sc-recent"></div>        
      </div>
      <div>
-      <div>South Dakota</div>
+      <div class="covid-track-head-titles">South Dakota</div>
       <div class="us-covidtrack-sd-confirm"></div>
       <div class="us-covidtrack-sd-death"></div>
       <div class="us-covidtrack-sd-tothos"></div>
@@ -1247,7 +1247,7 @@
       <div class="us-covidtrack-sd-recent"></div>        
      </div>
      <div>
-      <div>Tennessee</div>
+      <div class="covid-track-head-titles">Tennessee</div>
       <div class="us-covidtrack-tn-confirm"></div>
       <div class="us-covidtrack-tn-death"></div>
       <div class="us-covidtrack-tn-tothos"></div>
@@ -1255,7 +1255,7 @@
       <div class="us-covidtrack-tn-curicu"></div> 
       <div class="us-covidtrack-tn-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Texas</div>
       <div class="us-covidtrack-tx-confirm"></div>
       <div class="us-covidtrack-tx-death"></div>
@@ -1264,7 +1264,7 @@
       <div class="us-covidtrack-tx-curicu"></div> 
       <div class="us-covidtrack-tx-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>US Virgin Island</div>
       <div class="us-covidtrack-vi-confirm"></div>
       <div class="us-covidtrack-vi-death"></div>
@@ -1273,7 +1273,7 @@
       <div class="us-covidtrack-vi-curicu"></div> 
       <div class="us-covidtrack-vi-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Utah</div>
       <div class="us-covidtrack-ut-confirm"></div>
       <div class="us-covidtrack-ut-death"></div>
@@ -1282,7 +1282,7 @@
       <div class="us-covidtrack-ut-curicu"></div> 
       <div class="us-covidtrack-ut-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Vermont</div>
       <div class="us-covidtrack-vt-confirm"></div>
       <div class="us-covidtrack-vt-death"></div>
@@ -1291,7 +1291,7 @@
       <div class="us-covidtrack-vt-curicu"></div> 
       <div class="us-covidtrack-vt-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Virginia</div>
       <div class="us-covidtrack-va-confirm"></div>
       <div class="us-covidtrack-va-death"></div>
@@ -1300,7 +1300,7 @@
       <div class="us-covidtrack-va-curicu"></div> 
       <div class="us-covidtrack-va-recent"></div>        
      </div>        
-     <div>
+     <div class="covid-track-head-titles">
       <div>Washington</div>
       <div class="us-covidtrack-wa-confirm"></div>
       <div class="us-covidtrack-wa-death"></div>
@@ -1309,7 +1309,7 @@
       <div class="us-covidtrack-wa-curicu"></div> 
       <div class="us-covidtrack-wa-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>West Virginia</div>
       <div class="us-covidtrack-wv-confirm"></div>
       <div class="us-covidtrack-wv-death"></div>
@@ -1318,7 +1318,7 @@
       <div class="us-covidtrack-wv-curicu"></div> 
       <div class="us-covidtrack-wv-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Wisconsin</div>
       <div class="us-covidtrack-wi-confirm"></div>
       <div class="us-covidtrack-wi-death"></div>
@@ -1327,7 +1327,7 @@
       <div class="us-covidtrack-wi-curicu"></div> 
       <div class="us-covidtrack-wi-recent"></div>        
      </div>
-     <div>
+     <div class="covid-track-head-titles">
       <div>Wyoming</td>
       <div class="us-covidtrack-wy-confirm"></div>
       <div class="us-covidtrack-wy-death"></div>
